Update the WebRTC library to the latest official release